后端 - 对话历史模块（对话记忆持久化） 1. 利用 LangChain4j + Redis 实现对话记忆持久化 2. 通过工厂为 appId 创建隔离的 AI Service，并用 Caffeine 本地缓存优化 3. 从数据库中加载对话历史，实现真正地持久化 4. 增加 Redis Session，实现用户登录态持久化